bin_PROGRAMS=ttear
INCLUDES=-I./include @sdl_includes@

ttear_SOURCES=cpu.cpp joysticks.cpp keyboard.cpp main.cpp options.cpp rom.cpp vdc.cpp video.cpp vmachine.cpp

noinst_HEADERS=include/charset.h include/cpu.h include/extram.h include/extstorage.h include/globals.h include/iniparser.h include/joysticks.h include/keyboard.h include/opcodes.h include/options.h include/rom.h include/speedlimit.h include/util.h include/vdc.h include/video.h include/vmachine.h
