bin_PROGRAMS=ttear
INCLUDES=-I./include @sdl_includes@

ttear_SOURCES=cpu.cpp framebuffer.cpp joysticks.cpp keyboard.cpp main.cpp opengl_framebuffer.cpp options.cpp rom.cpp software_framebuffer.cpp vdc.cpp vmachine.cpp

noinst_HEADERS=include/charset.h include/common.h include/cpu.h include/extram.h include/extstorage.h include/framebuffer.h include/iniparser.h include/joysticks.h include/keyboard.h include/opcodes.h include/opengl_framebuffer.h include/options.h include/rom.h include/software_framebuffer.h include/speedlimit.h include/util.h include/vdc.h include/vmachine.h
